# my-templates

./: README.md
Plantilla-base-angular17--my-config/: .eslintrc.json  .prettierrc  README.md  angular.json  package.json  pnpm-lock.yaml
angular-18/: .cursorrules  .gitignore  README.md  package.json
angular18--my-config/: README.md  (+3 more)
fastapi_base/: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml
fastapi_base/alembic/: env.py
fastapi_base/alembic/versions/: 304c42ff4aa6_create_users_table.py  36d39baccee6_create_users_table.py  650aa851ed1d_initial_migration.py  a23d806364bf_add_table_user.py
fastapi_base/db/: __init__.py  base_model.py  connection.py  session.py
fastapi_base/script/: db_config.py
fastapi_base/src/common/: __init__.py  abstracts.py  base_entity.py  base_repository.py  exceptions.py  schemas.py  settings.py
fastapi_base/src/core/: __init__.py  settings.py
fastapi_base/src/core/application/: schemas.py
fastapi_base/src/core/domain/: abstract_repository.py  base_entity.py  exceptions.py
fastapi_base/src/core/infrastructure/: base_repository.py
fastapi_base/src/core/infrastructure/security/: password_hasher.py
fastapi_base/src/modules/health_check/: __init__.py  router.py  schema.py
fastapi_base/src/modules/user/: __init__.py
fastapi_base/src/modules/user/application/: schemas.py  services.py
fastapi_base/src/modules/user/domain/: user.py  user_service.py
fastapi_base/src/modules/user/infraestructure/: models.py
fastapi_base/src/modules/user/infrastructure/: di.py  models.py  router.py  user_repository.py
(+51 files in other folders)
